src/test/ui/error-codes/E0026-teach.stderr
error[E0026]: struct `Thing` does not have a field named `z`
  --> $DIR/E0026-teach.rs:21:23
   |
LL |         Thing { x, y, z } => {}
   |                       ^ struct `Thing` does not have field `z`
   |
   = note: This error indicates that a struct pattern attempted to extract a non-existent field from a struct. Struct fields are identified by the name used before the colon : so struct patterns should resemble the declaration of the struct type being matched.
           
           If you are using shorthand field patterns but want to refer to the struct field by a different name, you should rename it explicitly.

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0026"
